--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
+    app:startDestination="@+id/nav_current_weather">
 
     <fragment
-        android:id="@+id/nav_home"
-        android:name="com.gaurav.weatherforecastapp.ui.home.HomeFragment"
-        android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/nav_current_weather"
+        android:name="com.gaurav.weatherforecastapp.ui.currentweather.CurrentWeatherFragment"
+        android:label="@string/menu_current_weather"
+        tools:layout="@layout/fragment_forecast_weather" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.gaurav.weatherforecastapp.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_forecast_weather"
+        android:name="com.gaurav.weatherforecastapp.ui.forecastweather.ForeCastWeatherFragment"
+        android:label="@string/menu_forecast_weather"
+        tools:layout="@layout/fragment_forecast_weather" />
 
-    <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.gaurav.weatherforecastapp.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
 </navigation>
