--- a/app/src/main/res/layout/two_days_forecast_data_holder.xml
+++ b/app/src/main/res/layout/two_days_forecast_data_holder.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardTwoDaysForecastCardView"
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
@@ -51,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="50dp"
                 android:text="37\u00B0"
-                android:textSize="70sp"
+                android:textSize="50sp"
                 app:layout_constraintBottom_toBottomOf="@+id/imageViewWeatherImage"
                 app:layout_constraintStart_toEndOf="@+id/imageViewWeatherImage"
                 app:layout_constraintTop_toTopOf="@+id/imageViewWeatherImage" />
@@ -64,6 +64,7 @@
                 android:layout_marginBottom="16dp"
                 android:text="Partly cloudy"
                 android:textSize="20sp"
+                android:textColor="@color/blue_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@+id/textViewForecastTemp"
                 app:layout_constraintStart_toStartOf="@+id/imageViewWeatherImage"
