--- a/app/src/main/res/layout/fragment_tomorrow_forecast.xml
+++ b/app/src/main/res/layout/fragment_tomorrow_forecast.xml
@@ -71,7 +71,7 @@
                 android:textColor="@color/white_color"
                 app:layout_constraintEnd_toEndOf="@+id/textViewTemperatureForecast"
                 app:layout_constraintHorizontal_bias="0.417"
-                app:layout_constraintStart_toStartOf="@+id/textViewTemperatureForecast"
+                app:layout_constraintStart_toStartOf="@+id/textViewMinTempForecast"
                 app:layout_constraintTop_toBottomOf="@+id/textViewTemperatureForecast" />
 
             <TextView
@@ -134,14 +134,15 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textViewFeelsTempForecast" />
 
-            <Space
+            <View
                 android:id="@+id/space"
                 android:layout_width="match_parent"
-                android:layout_height="3dp"
+                android:layout_height="2dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginEnd="20dp"
                 android:layout_marginTop="40dp"
-                android:background="@color/white_color"
+                android:background="@color/round_stroke_color"
                 app:layout_constraintStart_toStartOf="@+id/textViewMaxTempForecast"
                 app:layout_constraintTop_toBottomOf="@+id/textViewMaxTempForecast" />
 
@@ -151,7 +152,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginLeft="4dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
                 android:text="Current Details"
                 android:textSize="25sp"
                 android:textStyle="normal"
@@ -240,14 +241,15 @@
                 app:layout_constraintTop_toTopOf="@+id/textViewUvIndexForecast" />
 
 
-            <Space
+            <View
                 android:id="@+id/spaceCurrentDetails"
                 android:layout_width="match_parent"
-                android:layout_height="3dp"
+                android:layout_height="2dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginEnd="20dp"
                 android:layout_marginTop="40dp"
-                android:background="@color/white_color"
+                android:background="@color/round_stroke_color"
                 app:layout_constraintStart_toStartOf="@+id/textViewUvIndexForecast"
                 app:layout_constraintTop_toBottomOf="@+id/textViewUvIndexForecast" />
 
@@ -257,7 +259,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginLeft="4dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
                 android:text="Wind"
                 android:textSize="25sp"
                 android:textStyle="normal"
@@ -271,7 +273,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginLeft="4dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="10dp"
                 android:text="16"
                 android:textSize="30sp"
                 android:textStyle="normal"
@@ -279,14 +281,15 @@
                 app:layout_constraintStart_toStartOf="@+id/textViewWindForecast"
                 app:layout_constraintTop_toBottomOf="@+id/textViewWindForecast"/>
 
-            <Space
+            <View
                 android:id="@+id/spaceWindDetails"
                 android:layout_width="match_parent"
                 android:layout_height="3dp"
                 android:layout_marginStart="20dp"
                 android:layout_marginLeft="20dp"
+                android:visibility="gone"
                 android:layout_marginTop="40dp"
-                android:background="@color/white_color"
+                android:background="@color/round_stroke_color"
                 app:layout_constraintStart_toStartOf="@+id/textViewWindValueForecast"
                 app:layout_constraintTop_toBottomOf="@+id/textViewWindValueForecast" />
 
@@ -296,7 +299,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginLeft="4dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
+                android:visibility="gone"
                 android:text="@string/sunrise_text"
                 android:textSize="25sp"
                 android:textStyle="normal"
@@ -310,9 +314,11 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_marginLeft="4dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginTop="30dp"
                 android:text="Sunrise"
-                android:textSize="25sp"
+                android:visibility="gone"
+
+                android:textSize="20sp"
                 app:layout_constraintHorizontal_weight="1"
                 android:textStyle="normal"
                 android:textColor="@color/white_color"
@@ -325,6 +331,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
                 android:layout_marginLeft="2dp"
+                android:visibility="gone"
+
                 android:src="@drawable/ic_arrow_upward"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewSunriseForecast"
                 app:layout_constraintStart_toEndOf="@+id/textViewSunriseForecast"
@@ -338,8 +346,9 @@
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="10dp"
                 android:text="06:01 AM"
-                android:textSize="25sp"
-                app:layout_constraintHorizontal_weight="1"
+                android:textSize="20sp"
+                android:visibility="gone"
+
                 android:textStyle="normal"
                 android:textColor="@color/white_color"
                 app:layout_constraintStart_toStartOf="@+id/textViewSunriseForecast"
@@ -352,8 +361,9 @@
                 android:layout_height="wrap_content"
                 android:text="Sunset"
                 android:textSize="20sp"
-                app:layout_constraintHorizontal_weight="1"
-                android:layout_marginStart="5dp"
+                android:layout_marginStart="175dp"
+                android:visibility="gone"
+
                 android:textColor="@color/white_color"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewSunriseForecast"
                 app:layout_constraintTop_toTopOf="@+id/textViewSunriseForecast"
@@ -367,7 +377,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
                 android:layout_marginLeft="2dp"
-                android:src="@drawable/ic_arrow_upward"
+                android:visibility="gone"
+
+                android:src="@drawable/ic_arrow_downward"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewSunsetForecast"
                 app:layout_constraintStart_toEndOf="@+id/textViewSunsetForecast"
                 app:layout_constraintTop_toTopOf="@+id/textViewSunsetForecast" />
@@ -380,7 +392,9 @@
                 android:layout_marginLeft="4dp"
                 android:layout_marginTop="10dp"
                 android:text="06:45 PM"
-                android:textSize="25sp"
+                android:visibility="gone"
+
+                android:textSize="20sp"
                 app:layout_constraintHorizontal_weight="1"
                 android:textStyle="normal"
                 android:textColor="@color/white_color"
