--- a/app/src/main/res/layout/fragment_current_weather.xml
+++ b/app/src/main/res/layout/fragment_current_weather.xml
@@ -55,7 +55,7 @@
                 android:layout_height="168dp"
                 android:layout_marginEnd="1dp"
                 android:layout_marginRight="1dp"
-                android:src="@drawable/cloud"
+                android:src="@drawable/rain_gif"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewTemperature"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textViewTemperature"
@@ -311,9 +311,9 @@
                 android:id="@+id/textViewSunrise"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginStart="2dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="30dp"
                 android:text="Sunrise"
                 android:textSize="20sp"
                 android:textStyle="normal"
