--- a/app/src/main/res/layout/fragment_today_forecast.xml
+++ b/app/src/main/res/layout/fragment_today_forecast.xml
@@ -53,7 +53,7 @@
                 android:layout_height="168dp"
                 android:layout_marginEnd="1dp"
                 android:layout_marginRight="1dp"
-                android:src="@drawable/cloud"
+                android:src="@drawable/rain_gif"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewTemperatureForecast"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textViewTemperatureForecast"
