--- a/app/src/main/res/layout/fragment_tomorrow_forecast.xml
+++ b/app/src/main/res/layout/fragment_tomorrow_forecast.xml
@@ -53,9 +53,9 @@
                 android:layout_width="220dp"
                 android:layout_height="168dp"
                 android:layout_marginEnd="1dp"
-                android:visibility="gone"
                 android:layout_marginRight="1dp"
-                android:src="@drawable/cloud"
+                android:paddingTop="30dp"
+                android:src="@drawable/moving_cloud_gif"
                 app:layout_constraintBottom_toBottomOf="@+id/textViewTemperatureForecast"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textViewTemperatureForecast"
