--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -4,8 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/imagesweather"
-    android:gravity="bottom"
     android:orientation="vertical"
+    android:gravity="center"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -27,6 +27,7 @@
         android:layout_height="wrap_content"
         android:text="@string/nav_header_title"
         android:gravity="center"
+        android:layout_gravity="center"
         android:textSize="22sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
